syntax = "proto3";

package proto;

option go_package = "github.com/nk-nigeria/cgp-common/proto";

enum VipFarmCumulativeType {
    VIP_FARM_CUMULATIVE_TYPE_UNKNOWN = 0;
    VIP_FARM_CUMULATIVE_TYPE_CI = 1;
    VIP_FARM_CUMULATIVE_TYPE_PVP = 2;
    VIP_FARM_CUMULATIVE_TYPE_BETTING = 3;
    VIP_FARM_CUMULATIVE_TYPE_SLOT = 4;
}

message VipFarmTemplate {
    message Config {
        int64 ci_coeff = 1;
        int64 pvp_coeff = 2;
        int64 betting_coeff = 3;
        int64 slot_coeff = 4;
        int64 chips = 5;
    }
    map<int64,Config> config_map = 1;
    message BaseCoeffByFillRate {
        int32 fill_percent = 1;
        int32 coeff = 2;
    }
    repeated BaseCoeffByFillRate base_coeffs = 2;
    int32 coeff_scale = 3;
}

message UserVipFarm {
    string user_id = 1;
    int64 level = 2;
    int64 progress = 3;
}

message UserVipFarmProgress {
    string user_id = 1;
    int64 level = 2;
    double progress = 3;
    int32 progress_level = 4;
    int64 current_reward = 5;
    int64 next_reward = 6;
}